summative.moria.Moria.scala.error
Compilation error:
Moria:12: error: not found: value soriteTrouvee
while (!soriteTrouvee()) {
        ^