summative.moria.Moria.scala.code
/* tant que aps sur vert
Si facemur -> avance jusqua case verte
Si porte biscuit: si sur biscuit recule , posebiscuit, retourne
 									sinon avance
Sinon si surbiscuit -> prend biscuit,retourne
			sion avance()
      */



retourne()
while (!soriteTrouvee()) {
	if (porteBiscuit()){
		if (estSurBiscuit()){
			recule();poseBiscuit();retourne();avance()
		} else {
			avance()
		}
	}else {
		if (estSurBiscuit()){
			prendBiscuit();retourne()
		} else {
			if (estFaceMur()) {
				droite();avance();gauche();avance()
			} else{ 
        avance()
      }
		}
	}
}